# odysee

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  coverage.xml  odysee_paper.tex  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: description.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  python-package.yml
benches/: memory_benchmarks.rs  multimodal_benchmarks.rs
benchmarks/: run_benchmarks.py
cpp/: experts.cpp  experts.hpp
docs/: conf.py  index.rst
examples/: README.md  multimodal_processing.py  quickstart.py
odysee/: __init__.py  attention.py  config.py  experts.py  model.py  routing.py
odysee/core/: attention.py  device.py  loss.py  nn.py  tensor.py
odysee/cuda_ops/: __init__.py
odysee/rust/: __init__.py
paper/: README.md  odysee.tex  supplementary.tex
paper/figures/: architecture.tex  patches.tex  qiar.tex  routing.tex
python/odysee/: __init__.py
rust/: Cargo.toml
rust/src/: experts.rs  lib.rs  routing.rs
scripts/: install_cuda.sh
src/: distributed_memory.rs  hierarchical_memory.rs  lib.rs  multimodal.rs  pipeline.rs  quantum_router.rs  streaming.rs
tests/: test_experts.py  test_hardware_acceleration.py  test_routing.py
