[package]
name = "odysee"
version = "0.1.0"
edition = "2021"

[lib]
name = "odysee"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
ndarray = { version = "0.15", features = ["rayon"] }
num-complex = "0.4"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
