[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "odysee"
version = "0.1.0"
description = "High-performance multi-modal routing with quantum-inspired algorithms"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["deep-learning", "quantum", "routing", "multi-modal"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
repository = "https://github.com/yourusername/odysee"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
